@@ -1,4 +1,8 @@
 2015-02-21 Even Rouault <even.rouault@spatialys.com>
+	* src/lib_proj.cmake nad/CMakeLists.txt: cmake build: install
+	nad.lst, geodesic.h. But not emess.h and pj_list.h (from Charles Karney)
+
+2015-02-21 Even Rouault <even.rouault@spatialys.com>
 	* src/pj_gridinfo.c: remove trailing / from preprocessor line
 	 (from Charles Karney)
 
